--- a/boiler-plate/client/src/components/views/NavBar/Sections/NavBar.css
+++ b/boiler-plate/client/src/components/views/NavBar/Sections/NavBar.css
@@ -1,4 +1,4 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 .menu {
   padding: 0 20px;
@@ -21,9 +21,9 @@
 
 .menu__logo img {
   padding-left: 40px;
-  width:110px;
+  width: 110px;
   height: 40px;
-  float:top;
+  float: top;
 }
 
 .menu__container .ant-menu-item {
@@ -90,8 +90,8 @@
 
   .menu__logo img {
     padding-left: 30px;
-    width:100px;
-    height:70px;
-    float:top;
+    width: 100px;
+    height: 70px;
+    float: top;
   }
 }
