--- a/chat-app/src/index.css
+++ b/chat-app/src/index.css
@@ -61,6 +61,21 @@ body {
   font-weight: 200;
 }
 
+.message-form-button {
+  background: #7a84eb;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  margin-top: 40px;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: 100;
+  letter-spacing: 10px;
+}
+
+.message-form-button:hover {
+  background: #636ee6;
+}
 .auth-wrapper button[type="submit"],
 .auth-wrapper input[type="submit"] {
   background: #7a84eb;
