--- a/Nest-DeepDive/4. 랜덤 채팅 웹 앱/views/index.hbs
+++ b/Nest-DeepDive/4. 랜덤 채팅 웹 앱/views/index.hbs
@@ -8,8 +8,24 @@
   </head>
   <body>
     <h1>안녕 세상!</h1>
-    {{! app.controller에서 받은 메시지를 보여준다 }}
-    {{data.copyright}}
+    <div id='hello_stranger'></div>
+    <div id='chatting_box'></div>
+    <form id='chat_form'>
+      <input placeholder='Chat here..' />
+      <button type='submit'>Send</button>
+    </form>
+
+    <script src='https://unpkg.com/@babel/standalone/babel.min.js'></script>
+
+    <script
+      src='https://polyfill.io/v3/polyfill.min.js?features=default%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces2019'
+    ></script>
+
+    <script
+      src='https://cdn.socket.io/3.1.3/socket.io.min.js'
+      integrity='sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh'
+      crossorigin='anonymous'
+    ></script>
 
     <script src='js/scripts.js'></script>
   </body>
