--- a/Nest-DeepDive/4. 랜덤 채팅 웹 앱/public/css/style.css
+++ b/Nest-DeepDive/4. 랜덤 채팅 웹 앱/public/css/style.css
@@ -1,3 +1,7 @@
 body {
-  background-color: aquamarine;
+  background-color: black;
+}
+
+.bg_nest_color {
+  background-color: rgb(217, 19, 70);
 }
